scroll bar size change

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -8,6 +8,10 @@ body {
 
 }
 /* drop-shadow(12px 12px 72px  #ffffff60) */
+*{
+  scrollbar-width: thin;
+
+}
 
 @layer utilities {
   .text-balance {
