--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -131,12 +131,15 @@ body {
 }
 
 
-
-.component-hovered{
-  border: 3px solid rgb(61, 161, 255); 
-}
-
-
-.component-selected{
-  border: 3px solid rgb(0, 109, 211); 
+ 
+#nprogress .spinner-icon { 
+  position: fixed;
+  bottom: 30px;
+  left: 30px;
+  border-radius: 50%;
+  padding: 12px;
+  border-width: 3px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
